# neo-piano

./: AGENTS.md  LICENSE  Makefile  README-en.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
debian/: changelog  control  copyright  install  rules
packaging/: neo-piano.desktop
scripts/: build_deb.sh  install_on_neo.sh
src/neo_piano/: __init__.py  __main__.py  app.py
src/neo_piano/audio/: __init__.py  engine.py  fluidsynth.py  outputs.py  settings.py  soundfonts.py
src/neo_piano/ui/: __init__.py  qml_loader.py
src/neo_piano/ui/qml/: MainWindow.qml
tests/: __init__.py
tests/unit/: test_app.py  test_audio_engine.py  test_audio_settings.py  test_fluidsynth.py  test_qml_loader.py  test_soundfonts.py
